deployments/production/accounts-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: accounts
  labels:
    app: accounts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: accounts
            - name: MYSQL_HOST
              value: mysql
            - name: MYSQL_PORT
              value: "3306"
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: root
          image: pepeunlimited/accounts:0.1.11
          name: accounts
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
